Stop jumping iframes and stretch them too.

--- a/css/theme/source/4k.scss
+++ b/css/theme/source/4k.scss
@@ -43,6 +43,9 @@ $mainFontSize: 30px;
 
 // Overrides -----------------------------------
 .reveal .slides {
+  /** This prevents the showterm iframe from jumping. */
+  overflow: hidden;
+
   & > section.inverted,
   & > section > section.inverted {
     color: $invertedColor;
